--- a/package.json
+++ b/package.json
@@ -23,6 +23,11 @@
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "mongoose": "^6.3.2",
+    "multer": "^1.4.4",
+    "shortid": "^2.2.16",
+    "winston": "^3.7.2"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.16"
   }
 }
